# greybeard

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  BATCH_DASHBOARD_PR_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  COPILOT_BACKEND_PR_SUMMARY.md  COVERAGE_REPORT.md  DEVELOPMENT.md  DOCUMENTATION_IMPROVEMENTS.md  GITHUB_ACTIONS_PR_SUMMARY.md  INTERACTIVE_MODE_SUMMARY.md  Makefile  PR_SUMMARY.md  README.md  RELEASING.md  SAAS_READY_SUMMARY.md  SECURITY.md  SLO_AGENT.md  mkdocs.yml  pyproject.toml  release.sh  renovate.json
.claude/: instructions.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  REPOSITORY_SETUP.md  copilot-training.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  content_pack.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  greybeard-review.yml  publish.yml  stale.yml
docs/: batch-analysis.md  contributing.md  index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: adr-generator.md  backends.md  creating_agents.md  github-actions.md  interactive-mode.md  mcp.md  pre-commit.md  risk-gate-wizard.md  slo-agent.md
docs/reference/: cli.md  config-schema.md
examples/: custom_agent_template.py
examples/inputs/: README.md  migration-example.py  postmortem-example.md  security-example.py  startup-pragmatist-example.md
greybeard/: __init__.py  __init__.py,cover  analyzer.py  analyzer.py,cover  batch_analyzer.py  cli.py  cli.py,cover  cli_slo.py  config.py  config.py,cover  formatters.py  formatters.py,cover  github_action.py  github_action.py,cover  groq_fallback.py  history.py  history.py,cover  interactive.py  interactive.py,cover  mcp_server.py  mcp_server.py,cover  models.py  models.py,cover  modes.py  modes.py,cover  pack_wizard.py  pack_wizard.py,cover  packs.py  packs.py,cover  precommit.py  precommit.py,cover  precommit_cli.py  precommit_cli.py,cover  storage.py
greybeard/agents/: __init__.py  __init__.py,cover  slo_agent.py
greybeard/agents/reviews/: __init__.py  __init__.py,cover
greybeard/backends/: __init__.py  base.py  copilot.py
greybeard/common/: __init__.py  __init__.py,cover  agent.py  agent.py,cover  document.py  document.py,cover  interview.py  interview.py,cover  llm_wrapper.py  llm_wrapper.py,cover  research.py  research.py,cover
greybeard/packs/data-migrations/: DATA-MIGRATIONS-EXAMPLE.md  README.md  data-migrations.yaml
greybeard/packs/idp-readiness/: IDP-READINESS-EXAMPLE.md  README.md
greybeard/packs/incident-postmortem/: incident-postmortem.yaml
greybeard/packs/mentor-mode/: MENTOR-MODE-EXAMPLE.md  README.md  mentor-mode.yaml
greybeard/packs/oncall-future-you/: ONCALL-FUTURE-YOU-EXAMPLE.md  oncall-future-you.yaml
greybeard/packs/platform-eng/: README.md
greybeard/packs/security-reviewer/: security-reviewer.yaml
greybeard/packs/slo-patterns/: background-jobs.yaml  batch.yaml  critical-infra.yaml  saas.yaml
greybeard/packs/solutions-architect/: README.md  SOLUTIONS-ARCHITECT-EXAMPLE.md
greybeard/packs/staff-core/: STAFF-CORE-EXAMPLE.md  staff-core.yaml
greybeard/packs/startup-pragmatist/: README.md  STARTUP-PRAGMATIST-EXAMPLE.md
greybeard/reporters/: __init__.py  __init__.py,cover  adr.py  dashboard.py  pdf.py  pdf.py,cover
greybeard/wizards/: __init__.py  risk_gate_wizard.py
packs/: solutions-architect.yaml  startup-pragmatist.yaml
packs/idp-readiness/: idp-readiness.yaml
packs/incident-postmortem/: INCIDENT-POSTMORTEM-EXAMPLE.md  README.md
packs/oncall-future-you/: README.md
packs/platform-eng/: PLATFORM-ENG-EXAMPLE.md  PLATFORM-ENG-PACK.md  platform-eng.yaml
packs/security-reviewer/: README.md  SECURITY-REVIEWER-EXAMPLE.md
packs/staff-core/: README.md
packs/startup-pragmatist/: startup-pragmatist.yaml
staff_review/: __init__.py  analyzer.py  cli.py  config.py  mcp_server.py  models.py  packs.py
test_venv/: pyvenv.cfg
tests/: conftest.py  test_agent_integration.py  test_agents_init.py  test_analyzer.py  test_batch_analyzer.py  test_cli.py  test_cli_adr.py  test_cli_copilot_integration.py  test_cli_slo.py  test_common_agent.py  test_config.py  test_copilot_backend.py  test_coverage_boost.py  test_coverage_saas.py  test_document.py  test_formatters.py  test_github_action.py  test_history.py  test_interactive.py  test_interview.py  test_llm_wrapper.py  test_mcp_server.py  test_models.py  test_modes.py  test_pack_wizard.py  test_packs.py  test_packs_extended.py  test_precommit.py  test_precommit_cli.py  test_reporters_adr.py  test_reporters_dashboard.py  test_reporters_pdf.py  test_research.py  test_risk_gate_wizard.py  test_saas_features.py  test_slo_agent.py
